fix-gap-and-positio-arrow

--- a/styles/components/organisms/calculationResult.module.scss
+++ b/styles/components/organisms/calculationResult.module.scss
@@ -84,7 +84,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 8px;
 }
 
 .whatsappCtaTextWrapper {
